<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/nombre"
            android:textAlignment="viewStart"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/tamanioLetra1"></TextView>

        <EditText
            android:id="@+id/nombreTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorLetra1"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fechaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorDivider"
            android:paddingLeft="5dp"
            android:text="@string/fechaBoton"></Button>

        <TextView
            android:id="@+id/txtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorLetra1">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/genero"
            android:textAlignment="viewStart"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/tamanioLetra1"></TextView>

        <Spinner
            android:id="@+id/generoSpin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorLetra1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/valor"
            android:textAlignment="viewStart"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/tamanioLetra1"></TextView>

        <EditText
            android:id="@+id/valorTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorLetra1"
            android:textColorHighlight="@color/colorLetra1"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/calificacion"
            android:textAlignment="viewStart"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/tamanioLetra1"></TextView>

        <Spinner
            android:id="@+id/notaSpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorLetra1"></Spinner>
    </LinearLayout>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop1">

            <Button
                android:id="@+id/agregarBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorDivider"
                android:gravity="center"
                android:text="@string/agregar"
                android:textColor="@color/colorLetra1"
                android:textSize="@dimen/tamanioLetra1">

            </Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/colorIcons"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/guardadosList"
            android:textColor="@color/colorLetra1"
            android:textSize="@dimen/tamanioLetra2"
            android:textStyle="bold"></TextView>

        <ListView
            android:id="@+id/conciertosList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimarylight"></ListView>


    </LinearLayout>
</LinearLayout>

